# slurm

./: aclocal.m4  configure  configure.ac
contribs/pmi2/slurm/: pmi2.h
slurm/: slurm.h.in
src/common/: Makefile.am  Makefile.in  cli_filter.c  cli_filter.h  read_config.c  slurm_opt.h  slurm_protocol_api.c  slurm_protocol_api.h
src/plugins/: Makefile.am
src/plugins/cli_filter/: Makefile.am  Makefile.in
src/plugins/cli_filter/common/: Makefile.am  Makefile.in  cli_filter_common.c  cli_filter_common.h  cli_filter_common_gen.c  cli_filter_common_gen2.c  gen_cli_filter_common.py
src/plugins/cli_filter/defaults/: Makefile.in  cli_filter_defaults.c
src/plugins/cli_filter/lua/: Makefile.am  Makefile.in  cli_filter_lua.c  cli_filter_lua.h  cli_filter_lua_gen.c
src/plugins/cli_filter/syslog/: Makefile.in  cli_filter_syslog.c
src/plugins/cli_filter/user_defaults/: Makefile.in  cli_filter_user_defaults.c
src/plugins/mpi/pmi2/: setup.h
src/salloc/: opt.c  salloc.c
src/sbatch/: opt.c  sbatch.c
src/sbcast/: sbcast.c
src/slurmctld/: acct_policy.c  proc_req.c
src/slurmd/slurmstepd/: mgr.c
src/srun/libsrun/: allocate.c  opt.c  opt.h  srun_job.c
